Fix div overflow

--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -2,6 +2,5 @@
     background-image: url("../images/home_bg.jpg");
     background-size: auto;
     background-position: center bottom;
-    height: 90vh;
     padding: 1rem;
 }
